# dnd-scripts

./: Cargo.toml  README.md
scripts/: roll_dice.py
scripts/data/: races.json
