[package]
name = "dnd-scripts"
version = "0.1.0"
authors = ["Max Levine <max@maxlevine.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~2.33.3", features = ["yaml"]}
yaml-rust = "0.4"
rand = "0.8.1"
serde = "1.0.118"